<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                app:cardBackgroundColor="@color/colorBackgroundLight"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:cardMaxElevation="6dp"
                app:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewGenre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/genre"
                        android:textSize="18sp" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chip_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">
                    </com.google.android.material.chip.ChipGroup>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                app:cardBackgroundColor="@color/colorBackgroundLight"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:cardMaxElevation="6dp"
                app:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewCountry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/country"
                        android:textSize="18sp" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroupCountry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                    </com.google.android.material.chip.ChipGroup>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                app:cardBackgroundColor="@color/colorBackgroundLight"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:cardMaxElevation="6dp"
                app:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewYear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/year"
                        android:textSize="18sp" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/yearFrom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_1950"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.slider.RangeSlider
                            android:id="@+id/sliderYear"
                            android:layout_width="310dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:stepSize="1.0"
                            android:theme="@style/MyAppThemeMaterial"
                            android:valueFrom="1950.0"
                            android:valueTo="2020.0"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/yearTo"
                            app:layout_constraintStart_toEndOf="@+id/yearFrom"
                            app:layout_constraintTop_toTopOf="parent">

                        </com.google.android.material.slider.RangeSlider>

                        <TextView
                            android:id="@+id/yearTo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_2020"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                app:cardBackgroundColor="@color/colorBackgroundLight"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:cardMaxElevation="6dp"
                app:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/ratingKino"
                        android:textSize="18sp" />


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/ratingFrom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_0"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.slider.RangeSlider
                            android:id="@+id/sliderRating"
                            android:layout_width="310dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:stepSize="0.1"
                            android:theme="@style/MyAppThemeMaterial"
                            android:valueFrom="0.0"
                            android:valueTo="10.0"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/ratingTo"
                            app:layout_constraintStart_toEndOf="@+id/ratingFrom"
                            app:layout_constraintTop_toTopOf="parent">

                        </com.google.android.material.slider.RangeSlider>

                        <TextView
                            android:id="@+id/ratingTo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_10"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                app:cardBackgroundColor="@color/colorBackgroundLight"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:cardMaxElevation="6dp"
                app:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewRatingImdb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/ratingImdb"
                        android:textSize="18sp" />


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/ratingImdbFrom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_0"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.slider.RangeSlider
                            android:id="@+id/sliderRatingImdb"
                            android:layout_width="310dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:stepSize="0.1"
                            android:theme="@style/MyAppThemeMaterial"
                            android:valueFrom="0.0"
                            android:valueTo="10.0"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/ratingImdbTo"
                            app:layout_constraintStart_toEndOf="@+id/ratingImdbFrom"
                            app:layout_constraintTop_toTopOf="parent">

                        </com.google.android.material.slider.RangeSlider>

                        <TextView
                            android:id="@+id/ratingImdbTo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_10"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/colorBackgroundLight"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:cardMaxElevation="6dp"
                app:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewAgeLimit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/age_limit"
                        android:textSize="18sp" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroupAgeLimit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                    </com.google.android.material.chip.ChipGroup>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/buttonShow"
                android:layout_width="380dp"
                android:layout_height="35dp"
                android:layout_marginBottom="80dp"
                android:elevation="10dp"
                android:background="@drawable/round_shape_button"
                android:text="@string/show_films"
                android:textColor="@color/white_text"
                android:layout_gravity="center"/>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>